Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -61,12 +61,12 @@
   "pli-tv-kd14:3.1.7": "An individual who speaks in accordance with the Teaching persuades a sangha that speaks contrary to the Teaching—convinces it, makes it see, makes it consider, shows it, teaches it: ",
   "pli-tv-kd14:3.1.8": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:3.1.9": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
-  "pli-tv-kd14:3.1.10": "“Several people who speak in accordance with the Teaching persuade an individual who speaks contrary to the Teaching—convince him, make him see, make him consider, show him, teach him: ",
+  "pli-tv-kd14:3.1.10": "Several people who speak in accordance with the Teaching persuade an individual who speaks contrary to the Teaching—convince him, make him see, make him consider, show him, teach him: ",
   "pli-tv-kd14:3.1.11": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.12": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
+  "pli-tv-kd14:3.1.12": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.13": "Several people who speak in accordance with the Teaching persuade several people who speak contrary to the Teaching—convince them, make them see, make them consider, show them, teach them: ",
   "pli-tv-kd14:3.1.14": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.15": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
+  "pli-tv-kd14:3.1.15": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.16": "Several people who speak in accordance with the Teaching persuade a sangha that speaks contrary to the Teaching—convince it, make it see, make it consider, show it, teach it: ",
   "pli-tv-kd14:3.1.17": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:3.1.18": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
