Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -97,7 +97,7 @@
   "pli-tv-kd14:4.2.9": "ʻWhy don’t I assign the dwellings and designate the meals?ʼ” ",
   "pli-tv-kd14:4.2.11": "“Good, good, Dabba, ",
   "pli-tv-kd14:4.2.12": "please do so.” ",
-  "pli-tv-kd14:4.2.13": "“Yes.” ",
+  "pli-tv-kd14:4.2.13": "“Yes, Sir.” ",
   "pli-tv-kd14:4.3.1": "Soon afterwards the Buddha gave a teaching and addressed the monks: ",
   "pli-tv-kd14:4.3.2": "“Monks, the Sangha should appoint Dabba the Mallian as the assigner of dwellings and the designator of meals. ",
   "pli-tv-kd14:4.3.3": "And he should be appointed like this. ",
