--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -104,11 +104,11 @@
   "pli-tv-kd14:4.3.4": "First Dabba should be asked. ",
   "pli-tv-kd14:4.3.5": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:4.3.6": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd14:4.3.7": "If it seems appropriate to the Sangha, it should appoint Venerable Dabba the Mallian as assigner of dwellings and designator of meals. ",
+  "pli-tv-kd14:4.3.7": "If it seems appropriate to the Sangha, it should appoint Venerable Dabba the Mallian as the assigner of dwellings and the designator of meals. ",
   "pli-tv-kd14:4.3.8": "This is the motion. ",
   "pli-tv-kd14:4.3.9": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd14:4.3.10": "The Sangha appoints Venerable Dabba the Mallian as assigner of dwellings and designator of meals. ",
-  "pli-tv-kd14:4.3.11": "Any monk who approves of appointing Venerable Dabba as assigner of dwellings and designator of meals should remain silent. ",
+  "pli-tv-kd14:4.3.10": "The Sangha appoints Venerable Dabba the Mallian as the assigner of dwellings and the designator of meals. ",
+  "pli-tv-kd14:4.3.11": "Any monk who approves of appointing Venerable Dabba as the assigner of dwellings and the designator of meals should remain silent. ",
   "pli-tv-kd14:4.3.12": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:4.3.13": "The Sangha has appointed Venerable Dabba the Mallian as assigner of dwellings and designator of meals. ",
   "pli-tv-kd14:4.3.14": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
