Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -110,8 +110,8 @@
   "pli-tv-kd14:4.3.10": "The Sangha appoints Venerable Dabba the Mallian as the assigner of dwellings and the designator of meals. ",
   "pli-tv-kd14:4.3.11": "Any monk who approves of appointing Venerable Dabba as the assigner of dwellings and the designator of meals should remain silent. ",
   "pli-tv-kd14:4.3.12": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd14:4.3.13": "The Sangha has appointed Venerable Dabba the Mallian as assigner of dwellings and designator of meals. ",
-  "pli-tv-kd14:4.3.14": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd14:4.3.13": "The Sangha has appointed Venerable Dabba the Mallian as the assigner of dwellings and the designator of meals. ",
+  "pli-tv-kd14:4.3.14": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd14:4.4.1": "Dabba assigned dwellings to the monks according to their character. ",
   "pli-tv-kd14:4.4.2": "He assigned dwellings in the same place to those monks who were experts on the discourse, thinking, ",
   "pli-tv-kd14:4.4.3": "“They’ll recite the discourses together.” ",
