Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -121,7 +121,7 @@
   "pli-tv-kd14:4.4.7": "“They’ll discuss the Teaching;” ",
   "pli-tv-kd14:4.4.8": "for the meditators, thinking, ",
   "pli-tv-kd14:4.4.9": "“They won’t disturb one another;” ",
-  "pli-tv-kd14:4.4.10": "and for the gossips and the body-builders, thinking, ",
+  "pli-tv-kd14:4.4.10": "and for the gossips and the bodybuilders, thinking, ",
   "pli-tv-kd14:4.4.11": "“In this way even these venerables will be happy.” ",
   "pli-tv-kd14:4.4.12": "When monks arrived at night, he entered the fire element and assigned dwellings with the help of that light. ",
   "pli-tv-kd14:4.4.13": "Monks even arrived late on purpose, ",
