Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -148,7 +148,7 @@
   "pli-tv-kd14:4.4.35": "Dabba then returned to the Bamboo Grove. ",
   "pli-tv-kd14:4.5.1": "At that time the monks Mettiya and Bhūmajaka were only newly ordained. They had little merit, ",
   "pli-tv-kd14:4.5.2": "getting inferior dwellings and meals. ",
-  "pli-tv-kd14:4.5.3": "The people of Rājagaha were keen to give specially prepared almsfood to the senior monks—",
+  "pli-tv-kd14:4.5.3": "The people of Rājagaha were keen on giving specially prepared almsfood to the senior monks—",
   "pli-tv-kd14:4.5.4": "ghee, oil, and special curries—",
   "pli-tv-kd14:4.5.5": "but to the monks Mettiya and Bhūmajaka they gave ordinary food of ",
   "pli-tv-kd14:4.5.6": "porridge and broken rice. ",
