Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -165,7 +165,7 @@
   "pli-tv-kd14:4.6.4": "On one occasion the meal to be given by this householder on the following day had been designated to the monks Mettiya and Bhūmajaka. ",
   "pli-tv-kd14:4.6.5": "Just then that householder went to the monastery on some business. ",
   "pli-tv-kd14:4.6.6": "He approached Dabba, bowed, and sat down. ",
-  "pli-tv-kd14:4.6.7": "And Dabba instructed, inspired, and gladdened him with a teaching. ",
+  "pli-tv-kd14:4.6.7": "Dabba instructed, inspired, and gladdened him with a teaching. ",
   "pli-tv-kd14:4.6.8": "After the talk, he asked Dabba, ",
   "pli-tv-kd14:4.6.9": "“Sir, who has been designated to receive tomorrow’s meal in our house?” ",
   "pli-tv-kd14:4.6.10": "“Mettiya and Bhūmajaka.” ",
