Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -174,7 +174,7 @@
   "pli-tv-kd14:4.6.13": "“For those who are coming for tomorrow’s meal, prepare seats at the gateway and serve them broken rice and porridge.” ",
   "pli-tv-kd14:4.6.14": "“Yes, sir.” ",
   "pli-tv-kd14:4.7.1": "The monks Mettiya and Bhūmajaka said to each other, ",
-  "pli-tv-kd14:4.7.2": "“Yesterday we were designated a meal from the householder who offers fine food. ",
+  "pli-tv-kd14:4.7.2": "“Yesterday we were designated a meal from that householder who offers fine food. ",
   "pli-tv-kd14:4.7.3": "Tomorrow he’ll serve us together with his wives and children. ",
   "pli-tv-kd14:4.7.4": "Some of them will offer us rice, some bean curry, some oil, and some special curries.” ",
   "pli-tv-kd14:4.7.5": "And because they were excited, they did not sleep properly that night. ",
