Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -188,7 +188,7 @@
   "pli-tv-kd14:4.7.13": "“Eat, Sirs.” ",
   "pli-tv-kd14:4.7.14": "“But, Sister, we’ve come for the regular meal.” ",
   "pli-tv-kd14:4.7.15": "“I know. ",
-  "pli-tv-kd14:4.7.16": "But yesterday I was told by the head of our household ",
+  "pli-tv-kd14:4.7.16": "But yesterday I was told by the head of the household ",
   "pli-tv-kd14:4.7.17": "to serve you like this. ",
   "pli-tv-kd14:4.7.18": "Please eat.” ",
   "pli-tv-kd14:4.7.19": "They said to each other, ",
