--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -234,8 +234,8 @@
   "pli-tv-kd14:4.9.17": "The Buddha then got up from his seat and entered his dwelling. ",
   "pli-tv-kd14:4.9.18": "When the monks had expelled the nun Mettiyā, ",
   "pli-tv-kd14:4.9.19": "the monks Mettiya and Bhūmajaka said to them, ",
-  "pli-tv-kd14:4.9.20": "“Don’t expel the nun Mettiyā; she’s done nothing wrong. ",
-  "pli-tv-kd14:4.9.21": "She was urged on by us. We were angry and displeased, and trying to get Dabba to leave the monastic life.” ",
+  "pli-tv-kd14:4.9.20": "“Don’t expel the nun Mettiyā; she hasn’t done anything wrong. ",
+  "pli-tv-kd14:4.9.21": "She was urged on by us. We were angry and displeased, and trying to make Dabba give up the monastic life.” ",
   "pli-tv-kd14:4.9.22": "“But did you groundlessly charge Venerable Dabba with failure in morality?” ",
   "pli-tv-kd14:4.9.23": "“Yes.” ",
   "pli-tv-kd14:4.9.24": "The monks of few desires complained and criticized them, ",
