Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -240,7 +240,7 @@
   "pli-tv-kd14:4.9.23": "“Yes.” ",
   "pli-tv-kd14:4.9.24": "The monks of few desires … complained and criticized them, ",
   "pli-tv-kd14:4.9.25": "“How could the monks Mettiya and Bhūmajaka groundlessly charge Venerable Dabba with failure in morality?” ",
-  "pli-tv-kd14:4.9.26": "They rebuked those monks in many ways and then told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned those monks: ",
+  "pli-tv-kd14:4.9.26": "They then told the Buddha. … ",
   "pli-tv-kd14:4.9.27": "“Is it true, monks, that you did this?” ",
   "pli-tv-kd14:4.9.28": "“It’s true, Sir.” … ",
   "pli-tv-kd14:4.9.29": "After rebuking them … ",
