--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -257,7 +257,7 @@
   "pli-tv-kd14:4.10.11": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:4.10.12": "These monks Mettiya and Bhūmajaka are groundlessly charging Venerable Dabba the Mallian with failure in morality. ",
   "pli-tv-kd14:4.10.13": "Because of his great clarity of memory, Dabba is asking the Sangha for resolution through recollection. ",
-  "pli-tv-kd14:4.10.14": "If it seems appropriate to the Sangha, then, because of his great clarity of memory, the Sangha should grant Dabba resolution through recollection. ",
+  "pli-tv-kd14:4.10.14": "If it seems appropriate to the Sangha, the Sangha should grant Dabba resolution through recollection. ",
   "pli-tv-kd14:4.10.15": "This is the motion. ",
   "pli-tv-kd14:4.10.16": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:4.10.17": "These monks Mettiya and Bhūmajaka are groundlessly charging Venerable Dabba the Mallian with failure in morality. ",
