--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -262,7 +262,7 @@
   "pli-tv-kd14:4.10.16": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:4.10.17": "These monks Mettiya and Bhūmajaka are groundlessly charging Venerable Dabba the Mallian with failure in morality. ",
   "pli-tv-kd14:4.10.18": "Because of his great clarity of memory, Dabba is asking the Sangha for resolution through recollection. ",
-  "pli-tv-kd14:4.10.19": "Because of his great clarity of memory, the Sangha grants Dabba resolution through recollection. ",
+  "pli-tv-kd14:4.10.19": "The Sangha grants Dabba resolution through recollection. ",
   "pli-tv-kd14:4.10.20": "Any monk who approves of granting Dabba resolution through recollection should remain silent. ",
   "pli-tv-kd14:4.10.21": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:4.10.22": "For the second time I speak on this matter. … ",
