--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -270,7 +270,7 @@
   "pli-tv-kd14:4.10.24": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:4.10.25": "These monks Mettiya and Bhūmajaka are groundlessly charging Venerable Dabba the Mallian with failure in morality. ",
   "pli-tv-kd14:4.10.26": "Because of his great clarity of memory, Dabba is asking the Sangha for resolution through recollection. ",
-  "pli-tv-kd14:4.10.27": "Because of his great clarity of memory, the Sangha grants Dabba resolution through recollection. ",
+  "pli-tv-kd14:4.10.27": "The Sangha grants Dabba resolution through recollection. ",
   "pli-tv-kd14:4.10.28": "Any monk who approves of granting Dabba resolution through recollection should remain silent. ",
   "pli-tv-kd14:4.10.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:4.10.30": "Because of his great clarity of memory, the Sangha has granted Dabba the Mallian resolution through recollection. ",
