--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -274,8 +274,8 @@
   "pli-tv-kd14:4.10.28": "Any monk who approves of granting Dabba resolution through recollection should remain silent. ",
   "pli-tv-kd14:4.10.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:4.10.30": "Because of his great clarity of memory, the Sangha has granted Dabba the Mallian resolution through recollection. ",
-  "pli-tv-kd14:4.10.31": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
-  "pli-tv-kd14:4.11.1": "“There are these five factors for the legitimate granting of resolution through recollection: ",
+  "pli-tv-kd14:4.10.31": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
+  "pli-tv-kd14:4.11.1": "There are five factors for the legitimate granting of resolution through recollection: ",
   "pli-tv-kd14:4.11.2": "the monk is pure and free of offenses; he’s been accused; he asks for resolution through recollection; the Sangha grants him resolution through recollection; the legal procedure is legitimate and done by a unanimous assembly.” ",
   "pli-tv-kd14:5.1.0": "3. Resolution because of past insanity ",
   "pli-tv-kd14:5.1.1": "At one time the monk Gagga was insane and suffering from psychosis. ",
