--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -280,13 +280,13 @@
   "pli-tv-kd14:5.1.0": "3. Resolution because of past insanity ",
   "pli-tv-kd14:5.1.1": "At one time the monk Gagga was insane and suffering from psychosis. ",
   "pli-tv-kd14:5.1.2": "Because of this, he did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.1.3": "Monks accused him of an offense, saying, ",
+  "pli-tv-kd14:5.1.3": "The monks accused him of an offense, saying, ",
   "pli-tv-kd14:5.1.4": "“Venerable, do you remember committing such-and-such an offense?” ",
   "pli-tv-kd14:5.1.6": "“I was insane and suffering from psychosis. ",
   "pli-tv-kd14:5.1.7": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.1.8": "I don’t remember it; ",
+  "pli-tv-kd14:5.1.8": "I don’t remember it. ",
   "pli-tv-kd14:5.1.9": "I did it because I was insane.” ",
-  "pli-tv-kd14:5.1.10": "But they still accused him ",
+  "pli-tv-kd14:5.1.10": "But they kept on accusing him ",
   "pli-tv-kd14:5.1.11": "in the same way. ",
   "pli-tv-kd14:5.1.12": "The monks of few desires complained and criticized them, ",
   "pli-tv-kd14:5.1.13": "“How can these monks keep on accusing Gagga ",
