Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -288,7 +288,7 @@
   "pli-tv-kd14:5.1.9": "I did it because I was insane.” ",
   "pli-tv-kd14:5.1.10": "But they kept on accusing him ",
   "pli-tv-kd14:5.1.11": "in the same way. ",
-  "pli-tv-kd14:5.1.12": "The monks of few desires complained and criticized them, ",
+  "pli-tv-kd14:5.1.12": "The monks of few desires … complained and criticized them, ",
   "pli-tv-kd14:5.1.13": "“How can these monks keep on accusing Gagga ",
   "pli-tv-kd14:5.1.15": "when he says ",
   "pli-tv-kd14:5.1.16": "he was insane?” ",
