Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -292,7 +292,7 @@
   "pli-tv-kd14:5.1.13": "“How can these monks keep on accusing Gagga ",
   "pli-tv-kd14:5.1.15": "when he says ",
   "pli-tv-kd14:5.1.16": "he was insane?” ",
-  "pli-tv-kd14:5.1.22": "They told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned them: ",
+  "pli-tv-kd14:5.1.22": "They told the Buddha. … ",
   "pli-tv-kd14:5.1.23": "He said, “Is it true, monks, that these monks are doing this?” ",
   "pli-tv-kd14:5.1.24": "“It’s true, Sir.” … ",
   "pli-tv-kd14:5.1.25": "After rebuking them … ",
