Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -300,7 +300,7 @@
   "pli-tv-kd14:5.1.27": "“Well then, since he’s no longer insane, grant the monk Gagga resolution because of past insanity. ",
   "pli-tv-kd14:5.2.1": "And it should be granted like this. ",
   "pli-tv-kd14:5.2.2": "The monk Gagga should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
-  "pli-tv-kd14:5.2.3": "‘Venerables, I have been insane and suffering from psychosis. ",
+  "pli-tv-kd14:5.2.3": "‘Venerables, I’ve been insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.4": "Because of that, I did and said many things unworthy of a monastic. ",
   "pli-tv-kd14:5.2.5": "Monks accused me of an offense, ",
   "pli-tv-kd14:5.2.6": "“Venerable, do you remember committing such-and-such an offense?” ",
