Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -314,9 +314,9 @@
   "pli-tv-kd14:5.2.14": "Because I’m no longer insane, I ask the Sangha for resolution because of past insanity.’ ",
   "pli-tv-kd14:5.2.15": "And he should ask a second time, ",
   "pli-tv-kd14:5.2.16": "and a third time: ",
-  "pli-tv-kd14:5.2.17": "‘Venerables, I have been insane and suffering from psychosis. ",
+  "pli-tv-kd14:5.2.17": "‘Venerables, I’ve been insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.18": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.2.19": "Monks accused me of an offense, ",
+  "pli-tv-kd14:5.2.19": "The monks accused me of an offense, saying, ",
   "pli-tv-kd14:5.2.20": "“Venerable, do you remember committing such-and-such an offense?” ",
   "pli-tv-kd14:5.2.21": "I replied, ",
   "pli-tv-kd14:5.2.22": "“I was insane and suffering from psychosis. ",
