Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -321,15 +321,15 @@
   "pli-tv-kd14:5.2.21": "I replied, ",
   "pli-tv-kd14:5.2.22": "“I was insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.23": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.2.24": "I don’t remember it; I did it because I was insane.” ",
-  "pli-tv-kd14:5.2.25": "But they still accused me ",
+  "pli-tv-kd14:5.2.24": "I don’t remember it. I did it because I was insane.” ",
+  "pli-tv-kd14:5.2.25": "But they kept on accusing me ",
   "pli-tv-kd14:5.2.26": "in the same way. ",
   "pli-tv-kd14:5.2.27": "Because I’m no longer insane, for the third time I ask the Sangha for resolution because of past insanity.’ ",
   "pli-tv-kd14:5.2.28": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:5.2.29": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:5.2.30": "The monk Gagga has been insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.31": "Because of that, he did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.2.32": "Monks accused him of an offense, ",
+  "pli-tv-kd14:5.2.32": "The monks accused him of an offense, saying, ",
   "pli-tv-kd14:5.2.33": "“Venerable, do you remember committing such-and-such an offense?” ",
   "pli-tv-kd14:5.2.34": "He replied, ",
   "pli-tv-kd14:5.2.35": "“I was insane and suffering from psychosis. ",
