--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -334,10 +334,10 @@
   "pli-tv-kd14:5.2.34": "He replied, ",
   "pli-tv-kd14:5.2.35": "“I was insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.36": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.2.37": "I don’t remember it; I did it because I was insane.” ",
-  "pli-tv-kd14:5.2.38": "But they still accused him ",
+  "pli-tv-kd14:5.2.37": "I don’t remember it. I did it because I was insane.” ",
+  "pli-tv-kd14:5.2.38": "But they kept on accusing him ",
   "pli-tv-kd14:5.2.39": "in the same way. ",
-  "pli-tv-kd14:5.2.40": "Because he is no longer insane, he is asking the Sangha for resolution because of past insanity. ",
+  "pli-tv-kd14:5.2.40": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
   "pli-tv-kd14:5.2.41": "If it seems appropriate to the Sangha, then, because he is no longer insane, the Sangha should grant the monk Gagga resolution because of past insanity. ",
   "pli-tv-kd14:5.2.42": "This is the motion. ",
   "pli-tv-kd14:5.2.43": "Please, Venerables, I ask the Sangha to listen. ",
