--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -338,12 +338,12 @@
   "pli-tv-kd14:5.2.38": "But they kept on accusing him ",
   "pli-tv-kd14:5.2.39": "in the same way. ",
   "pli-tv-kd14:5.2.40": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
-  "pli-tv-kd14:5.2.41": "If it seems appropriate to the Sangha, then, because he is no longer insane, the Sangha should grant the monk Gagga resolution because of past insanity. ",
+  "pli-tv-kd14:5.2.41": "If it seems appropriate to the Sangha, the Sangha should grant the monk Gagga resolution because of past insanity. ",
   "pli-tv-kd14:5.2.42": "This is the motion. ",
   "pli-tv-kd14:5.2.43": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:5.2.44": "The monk Gagga has been insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.45": "Because of that, he did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.2.46": "Monks accused him of an offense, ",
+  "pli-tv-kd14:5.2.46": "The monks accused him of an offense, saying, ",
   "pli-tv-kd14:5.2.47": "“Venerable, do you remember committing such-and-such an offense?” ",
   "pli-tv-kd14:5.2.48": "He replied, ",
   "pli-tv-kd14:5.2.49": "“I was insane and suffering from psychosis. ",
