--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -348,11 +348,11 @@
   "pli-tv-kd14:5.2.48": "He replied, ",
   "pli-tv-kd14:5.2.49": "“I was insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.50": "Because of that, I did and said many things unworthy of a monastic. ",
-  "pli-tv-kd14:5.2.51": "I don’t remember it; I did it because I was insane.” ",
-  "pli-tv-kd14:5.2.52": "But they still accused him ",
+  "pli-tv-kd14:5.2.51": "I don’t remember it. I did it because I was insane.” ",
+  "pli-tv-kd14:5.2.52": "But they kept on accusing him ",
   "pli-tv-kd14:5.2.53": "in the same way. ",
-  "pli-tv-kd14:5.2.54": "Because he is no longer insane, he is asking the Sangha for resolution because of past insanity. ",
-  "pli-tv-kd14:5.2.55": "Because he is no longer insane, the Sangha grants the monk Gagga resolution because of past insanity. ",
+  "pli-tv-kd14:5.2.54": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
+  "pli-tv-kd14:5.2.55": "The Sangha grants the monk Gagga resolution because of past insanity. ",
   "pli-tv-kd14:5.2.56": "Any monk who approves of granting the monk Gagga resolution because of past insanity should remain silent. ",
   "pli-tv-kd14:5.2.57": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:5.2.58": "For the second time I speak on this matter. … ",
