--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -357,8 +357,8 @@
   "pli-tv-kd14:5.2.57": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:5.2.58": "For the second time I speak on this matter. … ",
   "pli-tv-kd14:5.2.59": "For the third time I speak on this matter. … ",
-  "pli-tv-kd14:5.2.60": "Since he is no longer insane, the Sangha has granted the monk Gagga resolution because of past insanity. ",
-  "pli-tv-kd14:5.2.61": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:5.2.60": "Since he’s no longer insane, the Sangha has granted the monk Gagga resolution because of past insanity. ",
+  "pli-tv-kd14:5.2.61": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:6.1.1": "There are three illegitimate and three legitimate grantings of resolution because of past insanity. ",
   "pli-tv-kd14:6.1.2": "What are the three illegitimate grantings of resolution because of past insanity? ",
   "pli-tv-kd14:6.1.3": "It may be that a monk has committed an offense. ",
