Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -378,7 +378,7 @@
   "pli-tv-kd14:6.1.17": "It may be that a monk has committed an offense. ",
   "pli-tv-kd14:6.1.18": "The Sangha, several monks, or a single monk accuses him, saying, ",
   "pli-tv-kd14:6.1.19": "‘Venerable, do you remember committing such-and-such an offense?’ ",
-  "pli-tv-kd14:6.1.20": "Although he is sane, he acts insane, saying, ",
+  "pli-tv-kd14:6.1.20": "Although he’s sane, he acts insane, saying, ",
   "pli-tv-kd14:6.1.21": "‘I do this, ",
   "pli-tv-kd14:6.1.22": "and so do you. ",
   "pli-tv-kd14:6.1.23": "This is allowable for me, ",
