Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -425,7 +425,7 @@
   "pli-tv-kd14:7.1.8": "“It’s true, Sir.” … ",
   "pli-tv-kd14:7.1.9": "After rebuking them … ",
   "pli-tv-kd14:7.1.10": "the Buddha gave a teaching and addressed the monks: ",
-  "pli-tv-kd14:7.1.11": "“You should not do legal procedures—",
+  "pli-tv-kd14:7.1.11": "“You shouldn’t do legal procedures—",
   "pli-tv-kd14:7.1.12": "condemnation, demotion, banishment, reconciliation, or ejection—against monks without their admission. ",
   "pli-tv-kd14:7.1.13": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd14:8.1.2": "“And how is acting according to what has been admitted illegitimate? ",
