--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -438,7 +438,7 @@
   "pli-tv-kd14:8.1.9": "then that acting according to what has been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.10": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.1.11": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.12": "‘Venerable, you have committed an offense entailing expulsion.’ ",
+  "pli-tv-kd14:8.1.12": "‘Venerable, haven’t committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.1.13": "He says, ",
   "pli-tv-kd14:8.1.14": "‘I haven’t committed an offense entailing expulsion, but a serious offense … ",
   "pli-tv-kd14:8.1.15": "but an offense entailing confession … ",
