Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -454,7 +454,7 @@
   "pli-tv-kd14:8.1.25": "an offense of wrong conduct … ",
   "pli-tv-kd14:8.1.26": "an offense of wrong speech. ",
   "pli-tv-kd14:8.1.27": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.28": "‘Venerable, you have committed an offense of wrong speech.’ ",
+  "pli-tv-kd14:8.1.28": "‘Venerable, haven’t committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.1.29": "He says, ",
   "pli-tv-kd14:8.1.30": "‘I haven’t committed an offense of wrong speech, but an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.1.31": "If the Sangha makes him act according to an offense entailing expulsion, ",
