Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -461,7 +461,7 @@
   "pli-tv-kd14:8.1.32": "then that acting according to what has been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.33": "It may be that a monk has committed an offense of wrong speech. ",
   "pli-tv-kd14:8.1.34": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.35": "‘Venerable, you have committed an offense of wrong speech.’ ",
+  "pli-tv-kd14:8.1.35": "‘Venerable, haven’t committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.1.36": "He says, ",
   "pli-tv-kd14:8.1.37": "‘I haven’t committed an offense of wrong speech, but an offense entailing suspension … ",
   "pli-tv-kd14:8.1.38": "but a serious offense … ",
