Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -473,9 +473,9 @@
   "pli-tv-kd14:8.2.2": "“And how is acting according to what has been admitted legitimate? ",
   "pli-tv-kd14:8.2.3": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.2.4": "The Sangha, several monks, or a single monk accuses him, saying ",
-  "pli-tv-kd14:8.2.5": "‘Venerable, you have committed an offense entailing expulsion.’ ",
+  "pli-tv-kd14:8.2.5": "‘Venerable, haven’t committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.2.6": "He says, ",
-  "pli-tv-kd14:8.2.7": "‘Yes, I have committed an offense entailing expulsion.’ ",
+  "pli-tv-kd14:8.2.7": "‘Yes, I’ve committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.2.8": "If the Sangha makes him act according to an offense entailing expulsion, ",
   "pli-tv-kd14:8.2.9": "then that acting according to what has been admitted is legitimate. ",
   "pli-tv-kd14:8.2.10": "It may be that a monk has committed an offense entailing suspension … ",
