--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -485,7 +485,7 @@
   "pli-tv-kd14:8.2.14": "an offense of wrong conduct … ",
   "pli-tv-kd14:8.2.15": "an offense of wrong speech. ",
   "pli-tv-kd14:8.2.16": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.2.17": "‘Venerable, you have committed an offense of wrong speech.’ ",
+  "pli-tv-kd14:8.2.17": "‘Venerable, haven’t committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.2.18": "He says, ",
   "pli-tv-kd14:8.2.19": "‘Yes, I have committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.2.20": "If the Sangha makes him act according to an offense wrong speech, ",
