--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -506,7 +506,7 @@
   "pli-tv-kd14:9.1.13": "Any monk who approves of appointing monk so-and-so as the manager of the vote should remain silent. ",
   "pli-tv-kd14:9.1.14": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:9.1.15": "The Sangha has appointed monk so-and-so as the manager of the vote. ",
-  "pli-tv-kd14:9.1.16": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:9.1.16": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:10.1.1": "“There are ten reasons why a vote is illegitimate: ",
   "pli-tv-kd14:10.1.3": "it is only a minor legal issue; the full process for settling it hasn’t run its course; they haven’t tried to remember offenses and remind about offenses; the manager knows that those who speak contrary to the Teaching are in the majority; the manager expects that those who speak contrary to the Teaching will be in the majority; the manager knows that the Sangha will split; the manager expects that the Sangha will be split; they vote illegitimately; they vote with an incomplete assembly; they don’t vote according to their own views. ",
   "pli-tv-kd14:10.2.1": "There are ten reasons why a vote is legitimate: ",
