--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -535,9 +535,9 @@
   "pli-tv-kd14:11.2.12": "For the second time I speak on this matter. … ",
   "pli-tv-kd14:11.2.13": "For the third time I speak on this matter. … ",
   "pli-tv-kd14:11.2.14": "The Sangha has done a legal procedure of further penalty against the monk Upavāḷa. ",
-  "pli-tv-kd14:11.2.15": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:11.2.15": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:12.1.1": "There are these five factors of a legitimate legal procedure of further penalty: ",
-  "pli-tv-kd14:12.1.2": "the subject of the procedure is impure; he is shameless; he’s been accused; the procedure is legitimate; the procedure is done by a unanimous assembly. ",
+  "pli-tv-kd14:12.1.2": "the subject of the procedure is impure; he’s shameless; he’s been accused; the procedure is legitimate; the procedure is done by a unanimous assembly. ",
   "pli-tv-kd14:12.2.0": "6.1 The group of twelve on illegitimate legal procedures ",
   "pli-tv-kd14:12.2.1": "“When a legal procedure of further penalty has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd14:12.2.2": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
