--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -588,7 +588,7 @@
   "pli-tv-kd14:12.5.0": "6.4 The eighteen kinds of conduct ",
   "pli-tv-kd14:12.5.1": "“A monk who has had a legal procedure of further penalty done against himself should conduct himself properly. ",
   "pli-tv-kd14:12.5.2": "This is the proper conduct: ",
-  "pli-tv-kd14:12.5.3": "He should not give the full ordination. ",
+  "pli-tv-kd14:12.5.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd14:12.5.4": "He should not give formal support. ",
   "pli-tv-kd14:12.5.5": "He should not have a novice monk attend on him. ",
   "pli-tv-kd14:12.5.6": "He should not accept being appointed as an instructor of the nuns. ",
