Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -589,7 +589,7 @@
   "pli-tv-kd14:12.5.1": "“A monk who has had a legal procedure of further penalty done against himself should conduct himself properly. ",
   "pli-tv-kd14:12.5.2": "This is the proper conduct: ",
   "pli-tv-kd14:12.5.3": "He shouldn’t give the full ordination. ",
-  "pli-tv-kd14:12.5.4": "He should not give formal support. ",
+  "pli-tv-kd14:12.5.4": "He shouldn’t give formal support. ",
   "pli-tv-kd14:12.5.5": "He should not have a novice monk attend on him. ",
   "pli-tv-kd14:12.5.6": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd14:12.5.7.1": "Even if appointed, he should not instruct the nuns. ",
