--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -590,7 +590,7 @@
   "pli-tv-kd14:12.5.2": "This is the proper conduct: ",
   "pli-tv-kd14:12.5.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd14:12.5.4": "He shouldn’t give formal support. ",
-  "pli-tv-kd14:12.5.5": "He should not have a novice monk attend on him. ",
+  "pli-tv-kd14:12.5.5": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd14:12.5.6": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd14:12.5.7.1": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd14:12.5.7.2": "He should not commit the same offense as the offense for which the Sangha did the procedure of further penalty against him. ",
