--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -591,12 +591,12 @@
   "pli-tv-kd14:12.5.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd14:12.5.4": "He shouldn’t give formal support. ",
   "pli-tv-kd14:12.5.5": "He shouldn’t have a novice monk attend on him. ",
-  "pli-tv-kd14:12.5.6": "He should not accept being appointed as an instructor of the nuns. ",
-  "pli-tv-kd14:12.5.7.1": "Even if appointed, he should not instruct the nuns. ",
-  "pli-tv-kd14:12.5.7.2": "He should not commit the same offense as the offense for which the Sangha did the procedure of further penalty against him. ",
-  "pli-tv-kd14:12.5.7.3": "He should not commit an offense similar to the offense for which the Sangha did the procedure of further penalty against him. ",
-  "pli-tv-kd14:12.5.7.4": "He should not commit an offense worse than the offense for which the Sangha did the procedure of further penalty against him. ",
-  "pli-tv-kd14:12.5.7.5": "He should not criticize the procedure. ",
+  "pli-tv-kd14:12.5.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd14:12.5.7.1": "Even if appointed, he shouldn’t instruct the nuns. ",
+  "pli-tv-kd14:12.5.7.2": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of further penalty against him. ",
+  "pli-tv-kd14:12.5.7.3": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of further penalty against him. ",
+  "pli-tv-kd14:12.5.7.4": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of further penalty against him. ",
+  "pli-tv-kd14:12.5.7.5": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd14:12.5.7.6": "He should not criticize those who did the procedure. ",
   "pli-tv-kd14:12.5.7.7": "He should not cancel the observance-day procedure of a regular monk. ",
   "pli-tv-kd14:12.5.7.8": "He should not cancel the invitation of a regular monk. ",
