Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -597,10 +597,10 @@
   "pli-tv-kd14:12.5.7.3": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of further penalty against him. ",
   "pli-tv-kd14:12.5.7.4": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of further penalty against him. ",
   "pli-tv-kd14:12.5.7.5": "He shouldn’t criticize the procedure. ",
-  "pli-tv-kd14:12.5.7.6": "He should not criticize those who did the procedure. ",
-  "pli-tv-kd14:12.5.7.7": "He should not cancel the observance-day procedure of a regular monk. ",
-  "pli-tv-kd14:12.5.7.8": "He should not cancel the invitation of a regular monk. ",
-  "pli-tv-kd14:12.5.7.9": "He should not speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd14:12.5.7.6": "He shouldn’t criticize those who did the procedure. ",
+  "pli-tv-kd14:12.5.7.7": "He shouldn’t cancel the observance-day procedure of a regular monk. ",
+  "pli-tv-kd14:12.5.7.8": "He shouldn’t cancel the invitation of a regular monk. ",
+  "pli-tv-kd14:12.5.7.9": "He shouldn’t speak to a regular monk to initiate a legal process against him. ",
   "pli-tv-kd14:12.5.7.10": "He should not criticize a regular monk. ",
   "pli-tv-kd14:12.5.7.11": "He should not ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd14:12.5.7.12": "He should not accuse a regular monk of an offense. ",
