Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -601,11 +601,11 @@
   "pli-tv-kd14:12.5.7.7": "He shouldn’t cancel the observance-day procedure of a regular monk. ",
   "pli-tv-kd14:12.5.7.8": "He shouldn’t cancel the invitation of a regular monk. ",
   "pli-tv-kd14:12.5.7.9": "He shouldn’t speak to a regular monk to initiate a legal process against him. ",
-  "pli-tv-kd14:12.5.7.10": "He should not criticize a regular monk. ",
-  "pli-tv-kd14:12.5.7.11": "He should not ask a regular monk for permission to accuse him of an offense. ",
-  "pli-tv-kd14:12.5.7.12": "He should not accuse a regular monk of an offense. ",
-  "pli-tv-kd14:12.5.7.13": "He should not remind a regular monk of an offense. ",
-  "pli-tv-kd14:12.5.8": "He should not associate inappropriately with other monks.” ",
+  "pli-tv-kd14:12.5.7.10": "He shouldn’t criticize a regular monk. ",
+  "pli-tv-kd14:12.5.7.11": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
+  "pli-tv-kd14:12.5.7.12": "He shouldn’t accuse a regular monk of an offense. ",
+  "pli-tv-kd14:12.5.7.13": "He shouldn’t remind a regular monk of an offense. ",
+  "pli-tv-kd14:12.5.8": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd14:12.6.1": "The Sangha then did a legal procedure of further penalty against the monk Upavāḷa. ",
   "pli-tv-kd14:13.1.0": "7. Covering over as if with grass ",
   "pli-tv-kd14:13.1.1": "At one time, while the monks were arguing and disputing, they did and said many things unworthy of a monastic. ",
