--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -631,12 +631,12 @@
   "pli-tv-kd14:13.2.13": "‘Please, Venerables, I ask you to listen. ",
   "pli-tv-kd14:13.2.14": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
   "pli-tv-kd14:13.2.15": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
-  "pli-tv-kd14:13.2.16": "If it seems appropriate to you, then for your benefit and for my own, I will confess in the midst of the Sangha both your and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders.’ ",
+  "pli-tv-kd14:13.2.16": "If it seems appropriate to you, then for your benefit and for my own, I’ll confess in the midst of the Sangha both your and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders.’ ",
   "pli-tv-kd14:13.3.1": "“A competent and capable monk belonging to one side should inform the Sangha: ",
   "pli-tv-kd14:13.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:13.3.3": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
   "pli-tv-kd14:13.3.4": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
-  "pli-tv-kd14:13.3.5": "If it seems appropriate to the Sangha, then for the benefit of these venerables and myself, I will confess in the midst of the Sangha both their and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
+  "pli-tv-kd14:13.3.5": "If it seems appropriate to the Sangha, then for the benefit of these venerables and myself, I’ll confess in the midst of the Sangha both their and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
   "pli-tv-kd14:13.3.6": "This is the motion. ",
   "pli-tv-kd14:13.3.7": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:13.3.8": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
