--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -645,7 +645,7 @@
   "pli-tv-kd14:13.3.11": "Any monk who approves of confessing our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders should remain silent. ",
   "pli-tv-kd14:13.3.12": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:13.3.13": "We have confessed our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
-  "pli-tv-kd14:13.3.14": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:13.3.14": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:13.3.15": "“A competent and capable monk belonging to the other side should inform the Sangha: ",
   "pli-tv-kd14:13.3.16": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:13.3.17": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
