--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -650,7 +650,7 @@
   "pli-tv-kd14:13.3.16": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:13.3.17": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
   "pli-tv-kd14:13.3.18": "If we deal with one another for these offenses, this legal issue might lead to harshness, nastiness, and schism. ",
-  "pli-tv-kd14:13.3.19": "If it seems appropriate to the Sangha, then for the benefit of these venerables and myself, I will confess in the midst of the Sangha both their and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
+  "pli-tv-kd14:13.3.19": "If it seems appropriate to the Sangha, then for the benefit of these venerables and myself, I’ll confess in the midst of the Sangha both their and my own offenses by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
   "pli-tv-kd14:13.3.20": "This is the motion. ",
   "pli-tv-kd14:13.3.21": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:13.3.22": "While we were arguing and disputing, we did and said many things unworthy of a monastic. ",
