Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -659,7 +659,7 @@
   "pli-tv-kd14:13.3.25": "Any monk who approves of confessing our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders should remain silent. ",
   "pli-tv-kd14:13.3.26": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:13.3.27": "We have confessed our offenses in the midst of the Sangha by covering over as if with grass, except for heavy offenses and offenses connected with householders. ",
-  "pli-tv-kd14:13.3.28": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:13.3.28": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:13.4.1": "“In this way those monks are cleared of those offenses, except for heavy offenses and offenses connected with householders, and except for those monks who state their objection and those who are absent.” ",
   "pli-tv-kd14:14.1.0": "8. Legal issues ",
   "pli-tv-kd14:14.1.1": "On one occasion monks were disputing with monks, monks with nuns, and nuns with monks. Standing with the nuns, the monk Channa disputed with the monks, making others side with the nuns. ",
