Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -910,7 +910,7 @@
   "pli-tv-kd14:14.18.6": "If the visiting monks are senior to the resident monks, the resident monks should say, ",
   "pli-tv-kd14:14.18.7": "‘Well then, Venerables, please wait right here for a moment while we discuss this matter.’ ",
   "pli-tv-kd14:14.18.8": "If, while discussing that matter, the resident monks think, ",
-  "pli-tv-kd14:14.18.9": "‘We’re unable to resolve this legal issue according to the Teaching, the Monastic Law, and the Teacher’s instruction,’ then they should not take on that legal issue. ",
+  "pli-tv-kd14:14.18.9": "‘We’re unable to resolve this legal issue according to the Teaching, the Monastic Law, and the Teacher’s instruction,’ then they shouldn’t take on that legal issue. ",
   "pli-tv-kd14:14.18.10": "But if they think, ",
   "pli-tv-kd14:14.18.11": "‘We’re able to resolve this legal issue according to the Teaching, the Monastic Law, and the Teacher’s instruction,’ ",
   "pli-tv-kd14:14.18.12": "then they should say to the visiting monks, ",
