Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -914,7 +914,7 @@
   "pli-tv-kd14:14.18.10": "But if they think, ",
   "pli-tv-kd14:14.18.11": "‘We’re able to resolve this legal issue according to the Teaching, the Monastic Law, and the Teacher’s instruction,’ ",
   "pli-tv-kd14:14.18.12": "then they should say to the visiting monks, ",
-  "pli-tv-kd14:14.18.13": "‘If you will tell us how this legal issue arose, we’ll be able to dispose of it properly according to the Teaching, the Monastic Law, and the Teacher’s instruction. ",
+  "pli-tv-kd14:14.18.13": "‘If you’ll tell us how this legal issue arose, we’ll be able to dispose of it properly according to the Teaching, the Monastic Law, and the Teacher’s instruction. ",
   "pli-tv-kd14:14.18.14": "In this way we’ll take it on. ",
   "pli-tv-kd14:14.18.15": "If, however, you won’t tell us how this legal issue arose, we won’t be able to dispose of it properly according to the Teaching, the Monastic Law, and the Teacher’s instruction. We won’t take it on.’ ",
   "pli-tv-kd14:14.18.16": "Dealing properly with the case in this way, the resident monks should take on that legal issue. ",
