--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -956,7 +956,7 @@
   "pli-tv-kd14:14.20.10": "Any monk who approves of appointing monk so-and-so and monk so-and-so to a committee to resolve this legal issue should remain silent. ",
   "pli-tv-kd14:14.20.11": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.20.12": "The Sangha has appointed monk so-and-so and monk so-and-so to a committee to resolve this legal issue. ",
-  "pli-tv-kd14:14.20.13": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:14.20.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:14.21.1": "If those monks are able to resolve that legal issue by committee, this is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.21.3": "It has been resolved face-to-face. ",
   "pli-tv-kd14:14.21.4": "Face-to-face with what? ",
