Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1078,7 +1078,7 @@
   "pli-tv-kd14:14.27.8": "It can. ",
   "pli-tv-kd14:14.27.9": "How is that? ",
   "pli-tv-kd14:14.27.10": "It may be that monks are groundlessly charging a monk with failure in morality. ",
-  "pli-tv-kd14:14.27.11": "If that monk has great clarity of memory, he is to be granted resolution through recollection. ",
+  "pli-tv-kd14:14.27.11": "If that monk has great clarity of memory, he’s to be granted resolution through recollection. ",
   "pli-tv-kd14:14.27.12": "And it should be granted like this. ",
   "pli-tv-kd14:14.27.13": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd14:14.27.14": "and say: ",
