Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1094,7 +1094,7 @@
   "pli-tv-kd14:14.27.24": "This is the motion. ",
   "pli-tv-kd14:14.27.25": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.27.26": "Monks are groundlessly charging monk so-and-so with failure in morality. ",
-  "pli-tv-kd14:14.27.27": "Because of his great clarity of memory, he is asking the Sangha for resolution through recollection. ",
+  "pli-tv-kd14:14.27.27": "Because of his great clarity of memory, he’s asking the Sangha for resolution through recollection. ",
   "pli-tv-kd14:14.27.28": "Because of his great clarity of memory, the Sangha grants him resolution through recollection. ",
   "pli-tv-kd14:14.27.29": "Any monk who approves of granting him resolution through recollection should remain silent. ",
   "pli-tv-kd14:14.27.30": "Any monk who doesn’t approve should speak up. ",
