--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1134,7 +1134,7 @@
   "pli-tv-kd14:14.28.19": "And it should be granted like this. ",
   "pli-tv-kd14:14.28.20": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd14:14.28.21": "and say: ",
-  "pli-tv-kd14:14.28.22": "‘Venerables, I have been insane and suffering from psychosis. ",
+  "pli-tv-kd14:14.28.22": "‘Venerables, I’ve been insane and suffering from psychosis. ",
   "pli-tv-kd14:14.28.23": "Because of that, I did and said many things unworthy of a monastic. ",
   "pli-tv-kd14:14.28.24": "Monks accused me of an offense, saying, ",
   "pli-tv-kd14:14.28.25": "“Venerable, do you remember committing such-and-such an offense?” ",
