Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1161,8 +1161,8 @@
   "pli-tv-kd14:14.28.46": "I did it because I was insane.” ",
   "pli-tv-kd14:14.28.47": "But they still accused him ",
   "pli-tv-kd14:14.28.48": "in the same way. ",
-  "pli-tv-kd14:14.28.49": "Because he is no longer insane, he is asking the Sangha for resolution because of past insanity. ",
-  "pli-tv-kd14:14.28.50": "If it seems appropriate to the Sangha, then, because he is no longer insane, the Sangha should grant monk so-and-so resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.49": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.50": "If it seems appropriate to the Sangha, then, because he’s no longer insane, the Sangha should grant monk so-and-so resolution because of past insanity. ",
   "pli-tv-kd14:14.28.51": "This is the motion. ",
   "pli-tv-kd14:14.28.52": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.28.53": "The monk so-and-so has been insane and suffering from psychosis. ",
@@ -1176,8 +1176,8 @@
   "pli-tv-kd14:14.28.61": "I did it because I was insane.” ",
   "pli-tv-kd14:14.28.62": "But they still accused him ",
   "pli-tv-kd14:14.28.63": "in the same way. ",
-  "pli-tv-kd14:14.28.64": "Because he is no longer insane, he is asking the Sangha for resolution because of past insanity. ",
-  "pli-tv-kd14:14.28.65": "Because he is no longer insane, the Sangha grants monk so-and-so resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.64": "Because he’s no longer insane, he’s asking the Sangha for resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.65": "Because he’s no longer insane, the Sangha grants monk so-and-so resolution because of past insanity. ",
   "pli-tv-kd14:14.28.66": "Any monk who approves of granting monk so-and-so resolution because of past insanity should remain silent. ",
   "pli-tv-kd14:14.28.67": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.28.68": "For the second time I speak on this matter. … ",
