--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1182,8 +1182,8 @@
   "pli-tv-kd14:14.28.67": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd14:14.28.68": "For the second time I speak on this matter. … ",
   "pli-tv-kd14:14.28.69": "For the third time I speak on this matter. … ",
-  "pli-tv-kd14:14.28.70": "Because he is no longer insane, the Sangha has granted monk so-and-so resolution because of past insanity. ",
-  "pli-tv-kd14:14.28.71": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:14.28.70": "Because he’s no longer insane, the Sangha has granted monk so-and-so resolution because of past insanity. ",
+  "pli-tv-kd14:14.28.71": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:14.28.72": "This is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.28.74": "It has been resolved by resolution face-to-face and by resolution because of past insanity. ",
   "pli-tv-kd14:14.28.75": "Face-to-face with what? ",
