Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1211,7 +1211,7 @@
   "pli-tv-kd14:14.29.16": "As he tries to free himself, the accusing monk presses him further: ",
   "pli-tv-kd14:14.29.17": "‘Come on, Venerable, think properly whether you remember committing such-and-such a heavy offense.’ ",
   "pli-tv-kd14:14.29.18": "He replies, ",
-  "pli-tv-kd14:14.29.19": "‘I have admitted that I’ve committed this minor offense without being asked. ",
+  "pli-tv-kd14:14.29.19": "‘I’ve admitted that I’ve committed this minor offense without being asked. ",
   "pli-tv-kd14:14.29.20": "So when asked about such-and-such a heavy offense, why would I not admit it?’ ",
   "pli-tv-kd14:14.29.21": "The accusing monk says, ",
   "pli-tv-kd14:14.29.22": "‘But you didn’t admit that you had committed this minor offense without being asked. ",
