--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1235,7 +1235,7 @@
   "pli-tv-kd14:14.29.41": "For the second time I speak on this matter. … ",
   "pli-tv-kd14:14.29.42": "For the third time I speak on this matter. … ",
   "pli-tv-kd14:14.29.43": "The Sangha has done a legal procedure of further penalty against monk so-and-so. ",
-  "pli-tv-kd14:14.29.44": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd14:14.29.44": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd14:14.29.45": "This is called the resolution of a legal issue. ",
   "pli-tv-kd14:14.29.47": "It has been resolved face-to-face and by further penalty. ",
   "pli-tv-kd14:14.29.48": "Face-to-face with what? ",
