Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1254,7 +1254,7 @@
   "pli-tv-kd14:14.30.8": "How is that? ",
   "pli-tv-kd14:14.30.9": "It may be that a monk has committed a light offense. ",
   "pli-tv-kd14:14.30.10": "That monk should approach a single monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say: ",
-  "pli-tv-kd14:14.30.11": "‘I have committed such-and-such an offense. ",
+  "pli-tv-kd14:14.30.11": "‘I’ve committed such-and-such an offense. ",
   "pli-tv-kd14:14.30.12": "I confess it.’ ",
   "pli-tv-kd14:14.30.13": "—",
   "pli-tv-kd14:14.30.14": "‘Do you recognize the offense?’ —",
