Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1271,7 +1271,7 @@
   "pli-tv-kd14:14.30.28": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.31.1": "If this is what happens, all is well. ",
   "pli-tv-kd14:14.31.2": "If not, that monk should approach several monks, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
-  "pli-tv-kd14:14.31.3": "‘Venerables, I have committed such-and-such an offense. ",
+  "pli-tv-kd14:14.31.3": "‘Venerables, I’ve committed such-and-such an offense. ",
   "pli-tv-kd14:14.31.4": "I confess it.’ ",
   "pli-tv-kd14:14.31.5": "A competent and capable monk should then inform those monks: ",
   "pli-tv-kd14:14.31.6": "‘Please, Venerables, I ask you to listen. ",
